--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "Công cụ Ghép Nền Màu Cho Bìa Sách Ngoại Văn",
+  "description": "Ghép nền màu đăng tải các nền tảng mạng xã hội cho bìa sách ngoại văn, giúp làm nổi bật bìa sách. Công cụ được phát triển bởi Hiệu sách TINO.",
+  "applicationCategory": "Web App",
+  "url": "https://bookcover.tinoread.ing/",
+  "image": "https://bookcover.tinoread.ing/assets/favicon.png",
+  "operatingSystem": "All",
+  "author": {
+    "@type": "Organization",
+    "name": "TINO Reading",
+    "url": "https://tinoread.ing/",
+    "logo": "https://bookcover.tinoread.ing/assets/favicon.png",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "email": "care@tinoread.ing",
+      "contactType": "customer support"
+    },
+    "sameAs": [
+      "https://facebook.com/tinoreading",
+      "https://instagram.com/tinoreading"
+    ]
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "TINO Reading",
+    "url": "https://tinoread.ing/"
+  },
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "VND"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": [
+      "Đọc giả",
+      "Những người yêu sách",
+      "Tác giả viết sách"
+    ]
+  },
+  "isAccessibleForFree": true,
+  "inLanguage": "vi"
+}
+</script>
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
