--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
   "description": "Ghép nền màu đăng tải các nền tảng mạng xã hội cho bìa sách ngoại văn, giúp làm nổi bật bìa sách. Công cụ được phát triển bởi Hiệu sách TINO.",
   "applicationCategory": "Web App",
   "url": "https://bookcover.tinoread.ing/",
-  "image": "https://bookcover.tinoread.ing/assets/favicon.png",
+  "image": "https://bookcover.tinoread.ing/public/favicon.png",
   "operatingSystem": "All",
   "author": {
     "@type": "Organization",
     "name": "TINO Reading",
     "url": "https://tinoread.ing/",
-    "logo": "https://bookcover.tinoread.ing/assets/favicon.png",
+    "logo": "https://bookcover.tinoread.ing/public/favicon.png",
     "contactPoint": {
       "@type": "ContactPoint",
       "email": "care@tinoread.ing",
