--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,10 @@
   "audience": {
     "@type": "Audience",
     "audienceType": [
-      "Đọc giả",
-      "Những người yêu sách",
-      "Tác giả viết sách"
-    ]
+      "Đọc giả (Reader)",
+      "Những người yêu sách (Book lovers)",
+      "Tác giả viết sách (Authors)"
+]   
   },
   "isAccessibleForFree": true,
   "inLanguage": "vi"
